--- a/style.css
+++ b/style.css
@@ -1,50 +1,108 @@
 body {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-}
+    box-sizing: border-box;
+  }
+  .main{
+    /* display: flex; */
 
-#game-container {
+  }
+  .game-canvas {
+    padding-top: 5%;
+    width: 100%;
+    height: 100vw;
+    max-width: 320px;
+    max-height:700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .keys {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    height: 0px;
+    margin: auto;
+  }
+  
+  .up {
     position: relative;
-    width: 80vw; /* Responsive width */
-    height: 80vw; /* Responsive height */
-    max-width: 400px; /* Max width */
-    max-height: 400px; /* Max height */
-    border: 2px solid #333;
-    background-color: #f0f0f0;
-    margin-bottom: 20px;
-}
-
-#controls {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-#controls button {
-    background: none;
-    border: none;
+    top: -4px;
+  }
+  
+  .chevron::before {
+    border-style: solid;
+    border-width: 8px 8px 0 0;
+    content: '';
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    top: -10px;
+    position: relative;
+    transform: rotate(-45deg);
+  }
+  
+  .chevron.down::before {
+    transform: rotate(135deg);
+    top: -22px;
+  }
+  
+  .chevron.right::before {
+    transform: rotate(45deg);
+    top: -18px;
+    left: -5px;
+  }
+  
+  .chevron.left::before {
+    transform: rotate(225deg);
+    top: -18px;
+    left: 5px;
+  }
+  
+  .arr {
     cursor: pointer;
-}
-
-#controls img {
-    width: 40px;
-    height: 40px;
-}
-
-#up img {
-    transform: rotate(-90deg);
-}
-
-#down img {
-    transform: rotate(90deg);
-}
-
-#left img {
-    transform: rotate(180deg);
-}
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 100px;
+    background: #006400;
+    color: #F0E68C;
+    font-size: 10px;
+    border-right: 10px solid #8B4513;
+    border-bottom: 10px solid #8B4513;
+    border-left: 10px solid #b45918;
+    border-top: 10px solid #e06f1f;
+    display: inline-block;
+    margin: 5px;
+    transition: all .05s linear;
+    user-select: none;
+  }
+  
+  .arr:hover {
+    background-color: #009900;
+  }
+  
+  .arr:active {
+    background: #555;
+  }
+  
+  #game-container {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(220, 220, 220, 0.6);
+  }
+  
+  .footer {
+    margin-top: 100px;
+    text-align: center;
+    color: hsl(220, 15%, 55%);
+    font-weight: bold;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  .footer a {
+    text-decoration: none;
+    color: #8B4513;
+  }
